# solarwind-data

./: LICENSE  main.py  pyproject.toml  readme.md  solar_analysis.py  wind_analysis.py
input/: ceara_densiPV_01.tif  ceara_densiPV_02.tif  ceara_densiPV_03.tif  ceara_densiPV_04.tif  ceara_densiPV_05.tif  ceara_densiPV_06.tif  ceara_densiPV_07.tif  ceara_densiPV_08.tif  ceara_densiPV_09.tif  ceara_densiPV_10.tif  ceara_densiPV_11.tif  ceara_densiPV_12.tif  ceara_onshore.shp  ceara_onshore.shx  densidade_energia_solar_diaria_ceara_01.tif  densidade_energia_solar_diaria_ceara_02.tif  densidade_energia_solar_diaria_ceara_03.tif  densidade_energia_solar_diaria_ceara_04.tif  densidade_energia_solar_diaria_ceara_05.tif  densidade_energia_solar_diaria_ceara_06.tif  densidade_energia_solar_diaria_ceara_07.tif  densidade_energia_solar_diaria_ceara_08.tif  densidade_energia_solar_diaria_ceara_09.tif  densidade_energia_solar_diaria_ceara_10.tif  densidade_energia_solar_diaria_ceara_11.tif  densidade_energia_solar_diaria_ceara_12.tif
