[project]
name = "solarwind-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi==0.7.5",
    "dask==2025.9.1",
    "geopandas==1.0.1",
    "h5netcdf==1.7.3",
    "h5py==3.14.0",
    "matplotlib==3.10.0",
    "netcdf4==1.7.3",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "pyproj==3.7.0",
    "rasterio==1.4.3",
    "seaborn==0.13.2",
    "xarray==2025.3.0",
]
